--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
